--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,35 @@
   float: left;
   width: 50%;
   height: 400px;
+  position: relative;
+}
+
+.Cover-Image {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+/*.Cover-Details {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}*/
+
+/*.Cover-Details:hover {
+  position: absolute;
+  top: 0;
+  left: 0;
+}*/
+
+.Cover-Name {
+  font-size: 5rem;
+  color: white;
 }
