--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,34 @@
+.App {
+  position: relative;
+}
+
+.Scroller {
+  position: absolute;
+  left: 0;
+  width: 100%;
+}
+
+.Scroller[data-showplayer="0"] {
+  top: -100vh;
+}
+
+.Scroller[data-showplayer="1"] {
+  top: 0vh;
+}
+
+.Player-Container {
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.Cover-Container {
+
+}
+
 .Cover {
   float: left;
   width: 50%;
