--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
   position: absolute;
   left: 0;
   width: 100%;
-  /*transition: top 1s ease;*/
+  transition: top .5s linear;
 }
 
 .Scroller[data-showplayerholder="0"] {
